# ChatAUI

./: README.md  chainlit.md  chainlit.yaml  data.py  instructions.py  main.py  pyproject.toml  render.yaml  requirements.txt
.chainlit/: config.toml
public/: theme.json
public/elements/: DottedLoader.jsx
