[project]
name = "chataui-app"
version = "0.1.0"
description = "A Advance Question Answering Stateful chatbot with GitHub and Google authentication built with Python, UV, and Chainlit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit",
    "httpx>=0.28.1",
    "openai>=1.109.1",
    "openai-agents",
    "pydantic>=2.11.10",
    "python-dotenv",
    "requests>=2.32.5",
]
